Updated Video Section

--- a/src/data/project-details2-list.json
+++ b/src/data/project-details2-list.json
@@ -522,7 +522,7 @@
       "big": "Data-driven marketing platform for DTC brands"
     },
     "clientURLLink": "https://sbdigitalagency.com/",
-    "projectHeaderImage": "/img/portfolio/project2/bg11.jpg",
+    "projectHeaderImage": "/img/portfolio/project2/bg11.jpeg",
     "clientURLName": "SB Digital Agency",
     "date": "2024",
     "categories": [
